# moofile

./: .gitignore  Cargo.toml  LICENSE  README.md  autoembed_design.md  bench_native.py  benchmark.py  moofile-spec.md  pyproject.toml
.github/workflows/: build-wheels.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/_native/: __init__.py
bindings/python/src/: lib.rs
core/: Cargo.toml
core/examples/: bench.rs
core/src/: cache.rs  embed.rs  errors.rs  index.rs  lib.rs  query.rs  storage.rs  text.rs
core/tests/: api_guard.rs
docs/: README.md
examples/: analytics.py  basic_crud.py  contacts_app.py  document_search.py  event_log.py  import_export.py
moofile/: __init__.py  _native  _rust_adapter.py  aggregation.py  collection.py  errors.py  index.py  operators.py  query.py  storage.py  text_search.py
moofile/cli/: __init__.py  json_tool.py  mongo_tool.py  repl.py  sqlite_tool.py
scripts/: build.sh
tests/: test_aggregation.py  test_batch.py  test_collection.py  test_hybrid_search.py  test_storage.py  test_text_search.py  test_vector_search.py
tests-cross/: conftest.py  test_roundtrip.py
