[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moofile"
version = "0.1.0"
license = {text = "MIT"}
description = "Lightweight embedded document store — SQLite ergonomics, MongoDB-style queries"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0",
    "sortedcontainers>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
dev = ["pytest>=7", "pandas>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["moofile*"]
