[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moofile"
version = "0.1.1"
license = {text = "MIT"}
description = "Lightweight embedded document store — SQLite ergonomics, MongoDB-style queries"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0",
    "sortedcontainers>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
dev = ["pytest>=7", "pandas>=1.0"]

[project.scripts]
moosh      = "moofile.cli.repl:main"
moo2json   = "moofile.cli.json_tool:main"
moo2mongo  = "moofile.cli.mongo_tool:main"
moo2sqlite = "moofile.cli.sqlite_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moofile*"]
