[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moofile"
version = "0.2.1"
license = {text = "MIT"}
description = "Lightweight embedded document store — SQLite ergonomics, MongoDB-style queries"
readme = "docs/README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pat Wendorf", email = "dungeons@gmail.com"}
]
keywords = ["database", "embedded", "document-store", "mongodb", "sqlite", "vector-search", "text-search", "bm25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pymongo>=4.0",
    "sortedcontainers>=2.0",
    "numpy>=1.20",
    "snowballstemmer>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/patw/moofile"
"Repository" = "https://github.com/patw/moofile"
"Bug Tracker" = "https://github.com/patw/moofile/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
dev = ["pytest>=7", "pandas>=1.0"]

[project.scripts]
moosh      = "moofile.cli.repl:main"
moo2json   = "moofile.cli.json_tool:main"
moo2mongo  = "moofile.cli.mongo_tool:main"
moo2sqlite = "moofile.cli.sqlite_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moofile*"]
